Update handled tasks on the fly by updating their task properties files